add XPath context support for mandatory child node generation: enhance `XsdDocumentationService` and `XmlCodeEditor` to use XPath for disambiguating elements with identical names in different contexts; add recursive child node handling, sample value insertion, and cursor placement logic; extend tests and logging for accurate context-based functionality